# cohear

./: README.md  docker-compose.yml
backend/: .env  Dockerfile  README.md  docker-compose.yml  go.mod  go.sum
backend/cmd/: main.go
backend/src/config/: database.go  env.go  server.go
backend/src/handlers/: user.go
backend/src/handlers/middlewares/: auth.go
backend/src/models/: user.go
backend/src/repository/: user.go
backend/src/schemas/: login.go  user.go
backend/src/utils/: auth.go
frontend/: README.md  app.py  config.yaml  login.py  navigation.py  pyproject.toml
frontend/images/: bird.weba
frontend/pages/: dashboard.py  learning.py  profile.py  quiz.py
frontend/src/: auth.py  profile.py
frontend/src/schemas/: user.py
