[tool.poetry]
name = "frontend"
version = "0.1.0"
description = ""
authors = ["Gultaj Seyid <seidova.gultaj@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.9.7 || >3.9.7,<4.0"
streamlit = "^1.35.0"
streamlit-cookies-controller = "^0.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
